# AI-Generation-Firewall

./: AI-W0RM-QUICKSTART.md  AI-W0RM-README.md  CHANGELOG.md  README.md  RELEASE_NOTES_v1.1.0.md  package-lock.json  package.json
quantum-defense-matrix/: README.md  pyproject.toml
quantum-defense-matrix/config/: example.yml
quantum-defense-matrix/quantum_defense/: __init__.py  cli.py  config.py  core.py  firewall.py  honeypot.py  integrity.py  intelligence.py  logging.py  monitoring.py
quantum-defense-matrix/scripts/: install.sh
quantum-defense-matrix/scripts/systemd/: quantum-defense-update.service  quantum-defense-update.timer  quantum-defense.service
src/mastra/: index.ts
src/mastra/agents/: ai-w0rm-agent.ts  ai-w0rm-cyborg-g7.ts  index.ts
src/mastra/tools/: ai-w0rm-tool.ts  index.ts
src/mastra/workflows/: index.ts  security-scan-workflow.ts
