[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-defense-matrix"
version = "0.1.0"
description = "Experimental defensive orchestration service (firewall + tripwire + honeypot)"
authors = [{ name = "Quantum Defense Contributors" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9",
    "requests>=2.31",
    "cryptography>=41",
    "scapy>=2.5",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.12",
    "black>=24.3",
    "ruff>=0.4",
]

[project.scripts]
quantum-defense = "quantum_defense.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B", "ASYNC", "Q"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
